--- a/index.html
+++ b/index.html
@@ -46,16 +46,8 @@
         background-color: #e8f8ff;
       }
 
-      .background {
-        display: flex;
-        max-width: 1280px;
-        margin: 0 auto;
-        justify-content: space-between;
-        align-items: center;
-        padding: 80px;
-      }
       .form {
-        width: 500px;
+        max-width: 500px;
         background: #fff;
         border-radius: 6px;
         padding: 40px;
@@ -114,18 +106,10 @@
         position: absolute;
         color: var(--gray);
         max-width: 320px;
+        font-size: 14px;
         top: 51%;
         left: 21%;
         text-align: center;
-      }
-
-      @media screen and (max-width: 1024px) {
-        .background {
-          flex-direction: column;
-        }
-        .image-upload {
-          margin-top: 60px;
-        }
       }
     </style>
   </head>
