--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         font-family: "Averta" !important;
         background-color: #e8f8ff;
       }
+      .background {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
 
       .form {
         max-width: 500px;
