--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
 
       <!-- Image Upload Display -->
-      <div class="image-upload">
+      <!-- <div class="image-upload">
         <div id="test-box">
           <div class="image">
             <img src="assets/TYCard All (1).png" alt="" />
@@ -154,7 +154,7 @@
         <div class="button--container">
           <button id="download" class="download">Download</button>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <script>
